radiant-player-mac/css/spotify-black.css
/* ... */
#player-artist,
.player-album,
.player-dash {
  color: #aaa;
}

#player.active:hover .playing-progress-background {
  background: #555;
}

#top_divider_line,
.playing-progress-background {
  background: #333;
}

#time_container_duration {
  color: #ccc;
  background-color: #555;
}

#volume:hover,
#volume.simulated-hover {
  background: none !important;
}

#volume #vslider,
#volume #volume_low,
#volume #volume_high {
  opacity: 1 !important;
}

.suggested-query {
  color: #666;
}

.more-songs-container {
  border-top-color: transparent;
}

.material a,
.material .simple-dialog a {
  color: #aaa;
}

div.simple-dialog-bg {
  opacity: 0.01 !important;
  background-color: transparent;
}

.simple-dialog {
  -webkit-animation-duration: 0.8s;
  -webkit-animation-name: slidedown;
  -webkit-animation-timing-function: ease-out;
  overflow: hidden;
  top: 60px !important;
  border-radius: 0 0 5px 5px;
  border-top-width: 0;
  background-color: rgba(240, 240, 240, 0.98);
}

@-webkit-keyframes slidedown {
  from {
    max-height: 0%;
  }

  to {
    max-height: 100%;
  }
}

.simple-dialog-title,
.simple-dialog-content {
  background-color: transparent;
}

.simple-dialog-title {
  color: #444 !important;
}

.butter-bar-container {
  top: 0;
}

#loadingOverlay {
  -webkit-filter: invert(80%);
  opacity: .8 !important;
}

.sort-icon {
  -webkit-filter: brightness(-20%);
}

.now-playing-menu .goog-menuitem,
.now-playing-menu .goog-submenu,
.now-playing-menu .goog-submenu .goog-submenu-arrow,
.goog-menuitem,
.goog-menu {
  background: #2e2f33;
}

.material .goog-menu .goog-menuitem:hover {
  background: #3e3e40;
}

.material .goog-menu .goog-menuitem .goog-menuitem-content {
  color: #888 !important;
}

.material .goog-menuheader {
  color: #aaa !important;
}

.material .goog-menu .goog-menuitem:hover .goog-menuitem-content {
  color: #fafafa !important;
}

.material .goog-menu .goog-menuseparator {
  background-color: #2a2a2a !important;
}

.material .goog-menu .goog-menuitem .rating-container paper-icon-button {
  color: white;
}

.material .song-row [data-col="index"] .hover-button[data-id="play"],
.material .song-row [data-col="track"] .hover-button[data-id="play"] {

  /*border-radius:30px;
     background-color:#d3d3d3;*/
  background-image: url(https://radiant-player-mac/sprites-inverted.png) !important;
}

.material .song-row .rating-container.thumbs [data-rating] {
  -webkit-filter: invert(100%);
}

.material .song-row .column-content {
  background-color: transparent !important;
}

.material .song-row:hover,
.material .song-row:hover td,
.material .song-row:hover .column-content {
  background-color: #27282b !important;
}

.material-card .details .menu-anchor {
  color: #fff;
}

.material-card[data-size="small"][data-type="imfl"] .title {
  color: #fff;
}

::-webkit-scrollbar {
  background-color: #222326;
}

::-webkit-scrollbar-thumb {
  background-color: #000;
  border: 0.25em solid #222326;
}

/* Fill to highlight thumbed up/down track in status bar */
paper-icon-button[aria-label="Undo thumb-up"] iron-icon {

  /*background: url('https://radiant-player-mac/images/sprites.png') no-repeat -265px -222px;
     background-size: 725px 335px;*/
  display: inline-block;
}

paper-icon-button[aria-label="Undo thumb-down"] iron-icon {

  /*background: url('https://radiant-player-mac/images/sprites.png') no-repeat -165px -333px;
     background-size: 753px 368px;*/
  display: inline-block;
}

/* Hidden SVG & replaced icon */

/*
 paper-icon-button[aria-label="Undo thumb-up"] iron-icon {
 background: url('https://radiant-player-mac/sprites-inverted.png') no-repeat -334px -348px;
 background-size: 820px 395px;
 }
 paper-icon-button[aria-label="Thumb-up"] iron-icon svg {
 display: none!important;
 }
 */

/* New drawer / other additions */
[class*="sj-play-button"] #pulse {
  background-color: rgba(255, 87, 34, 0.4) !important;
}

[class*="sj-play-button"] #buttonContent {
  background: #ff5722 !important;
}

.primary:not([style-scope]):not(.style-scope) {
  color: #ff5722 !important;
}

/* Make drawer slimmer */
#drawer {
  width: 240px !important;
}

#drawer .music-logo-link {
  visibility: visible;
  background-image: url('https://dl.dropboxusercontent.com/u/18447700/play_music.svg');
  background-position: center 4px;
  background-size: 90% auto;
}

body.qp #material-app-bar #material-one-left .music-logo {
  background-image: url('https://dl.dropboxusercontent.com/u/18447700/play_music.svg');
}

#music-content .info-card,
#playlist-drawer .sj-right-drawer,
#playlist-drawer .sj-right-drawer #topBar {
  background: #222326 !important;
}

#music-content .info-card * {
  color: rgb(193, 193, 193) !important;
}

.share-buttons .button-label,
#checkboxLabel,
#playlist-drawer .sj-right-drawer #topBar {
  color: white !important;
}

.column .material-card[data-size="small"][data-type="imfl"] .title {
  color: #c2c2c2 !important;
}

[class*="paper-dialog"] {
  color: white !important;
  background: #222326 !important;
}

[class*="paper-dialog"] [class*="paper-input-container"] .input-content.paper-input-container input,
[class*="paper-dialog"] [class*="paper-input-container"] .input-content.paper-input-container textarea,
[class*="paper-dialog"] [class*="paper-input-container"] .input-content:not(.label-is-highlighted).paper-input-container label,
[class*="paper-dialog"] [class*="paper-input-container"] .input-content:not(.label-is-highlighted).paper-input-container .paper-input-label
[class*="paper-dialog"] [class*="paper-input-container"] .input-content.paper-input-container iron-autogrow-textarea,
[class*="paper-dialog"] [class*="paper-input-container"] .input-content.paper-input-container .paper-input-input {
  color: white !important;
}

#playlist-drawer .sj-right-drawer #dropShadow {
  display: none;
}

paper-dialog input::selection,
paper-dialog textarea::selection {
  background-color: rgba(255, 87, 34, 0.25) !important;
}
/* ... */

